# datasette-insecure-auth-as-root

./: datasette_insecure_auth_as_root-0.1-py3-none-any.whl  pyproject.toml
datasette_insecure_auth_as_root/: __init__.py
tests/: test_insecure_auth_as_root.py
